--- a/style.css
+++ b/style.css
@@ -1,3 +1,58 @@
+* { 
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-image: url("/Assets/bgImg3.jpg");
+    font-family:Arial, Helvetica, sans-serif
+}
+
+header {
+    background-color: rgb(248, 191, 84);
+    height: 10vh;
+}
+.container-fluid {
+    margin-top: 85px;
+}
+
 h1 {
-    align-content: center;
-};
+    color: rgb(96, 90, 90);
+    font-weight: bolder;
+    justify-content: center;
+    padding: 20px 70px 10px 10px;
+}
+
+label {
+    font-size:30px;
+    font-weight: bold;
+}
+
+#input-city {
+    background-color: rgb(250, 249, 249);
+    height: 40px;
+    width: 450px;
+    border-radius: 5px;
+    text-align: center;
+    padding-left: 5px;
+}
+
+
+hr {
+    width: 97%;
+    margin-left: 4px;
+    margin-top: 25px;
+    color: goldenrod;
+}
+
+#search-btn {
+    background-color: rgb(143, 233, 239);
+    height: 40px;
+    width: 450px;
+    border-radius: 5px;
+    border-color: grey;
+    font-weight: bolder;
+}
+
+#
