--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * { 
     box-sizing: border-box;
     padding: 0;
-    margin: 0;
+    margin: 10;
 }
 
 body {
@@ -18,13 +18,14 @@ header {
 }
 
 h1 {
-    color: rgb(96, 90, 90);
+    color: black;
     font-weight: bolder;
     justify-content: center;
     padding: 20px 70px 10px 10px;
 }
 
 label {
+    padding-bottom: 10px;
     font-size:30px;
     font-weight: bold;
 }
@@ -33,6 +34,7 @@ label {
     background-color: rgb(250, 249, 249);
     height: 40px;
     width: 450px;
+    border-color: grey;
     border-radius: 5px;
     text-align: center;
     padding-left: 5px;
@@ -51,8 +53,68 @@ hr {
     height: 40px;
     width: 450px;
     border-radius: 5px;
-    border-color: grey;
+    border-color: rgb(193, 191, 191);
     font-weight: bolder;
 }
 
-#
+#question-right-col {
+    font-size:30px;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+#current-fc {
+    padding-top: 10px;
+    border: 2px rgb(193, 191, 191) solid;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+
+h2 {
+    padding-left: 10px;
+    font-weight: bold;
+}
+
+p { 
+    padding-left: 5px;
+    padding-bottom: 15px;
+}
+
+h3 {
+    padding-left: 10px;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    font-size: 24px;
+}
+
+.card-body {
+    border: 2px rgb(193, 191, 191) solid;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    padding-bottom: 10;
+}
+
+h5 {
+    margin-left: 20px;
+    font-weight: bold;
+}
+
+/* img {
+    margin-left: 10px;
+} */
+
+input {
+    margin-top: 10px;
+    margin-left: 2px;
+    width: 400px;
+    border: rgb(193, 191, 191) solid;
+    border-radius: 3px;
+    background-color: white;
+    font-weight: bolder;
+    cursor: pointer;
+    text-align: center;
+}
+
+/
