--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: rgb(248, 191, 84);
+    background-color: wheat;
     height: 10vh;
 }
 .container-fluid {
@@ -49,7 +49,7 @@ hr {
 }
 
 #search-btn {
-    background-color: rgb(143, 233, 239);
+    background-color: rgb(239, 201, 130);
     height: 40px;
     width: 450px;
     border-radius: 5px;
@@ -91,7 +91,7 @@ h3 {
 
 .card-body {
     border: 2px rgb(193, 191, 191) solid;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(246, 230, 199);
     border-radius: 5px;
     padding-bottom: 10;
 }
